# CameraCapture

./: .clang-format  .gitattributes  .gitignore  AGENTS.md  ANDROID_IMPLEMENTATION_SUMMARY.md  BUILD_AND_INSTALL.md  CHANGE.md  CMakeLists.txt  CameraCapture.cpp  CameraCapture.h  CameraCaptureImp.cpp  CameraCaptureImp.h  CameraCaptureMac.h  CameraCaptureMac.mm  CameraCaptureWin.cpp  CameraCaptureWin.h  LIBRARY_NAMING_OPTIMIZATION.md  README.md  README.zh-CN.md  RELEASE_OPTIMIZATION.md  TEST_REMOTE_DETECTION.md  VERSION_MANAGEMENT_IMPROVEMENTS.md  ccap.podspec  conanfile.py  tasks.sh
.github/: copilot-instructions.md
.github/workflows/: check-version.yml  linux-build.yml  macos-build.yml  pages.yml  release.yml  rust.yml  windows-build.yml
_codeql_build_dir/: 0-print_camera  0-print_camera_c  1-minimal_example  1-minimal_example_c  2-capture_grab  2-capture_grab_c  3-capture_callback  3-capture_callback_c  CMakeCache.txt  Makefile  ccap.pc  ccapConfig.cmake  ccapConfigVersion.cmake  cmake_install.cmake
bindings/rust/: .gitignore  Cargo.toml  README.md  RUST_INTEGRATION_SUMMARY.md  build.rs  build_and_test.sh  wrapper.h
bindings/rust/examples/: async_capture.rs  capture_callback.rs  capture_frames.rs  capture_grab.rs  check_import.rs  list_cameras.rs  minimal_example.rs  module_test.rs  print_camera.rs  test_basic.rs  test_complete.rs  test_exports.rs  test_minimal.rs  test_step_by_step.rs
bindings/rust/src/: async.rs  convert.rs  error.rs  frame.rs  lib.rs  lib_minimal.rs  lib_simple.rs  provider.rs  test_simple.rs  types.rs  utils.rs
bindings/rust/tests/: integration_tests.rs
cli/: CMakeLists.txt  README.md  README.zh-CN.md  args_parser.cpp  args_parser.h  ccap-cli.cmake  ccap_cli.cpp  ccap_cli.h  ccap_cli_utils.cpp  ccap_cli_utils.h  ccap_cli_wuffs.cpp
cmake/: StaticRuntime.cmake  android_build.cmake  ccapConfig.cmake.in  dev.cmake.example
demo/: 0-print_camera.cpp  1-capture_grab.cpp  1-minimal_demo.cpp  2-capture_callback.cpp  2-capture_grab.cpp  3-capture_callback.cpp  4-demo_with_glfw.cpp  Info.plist  demo.cmake  demo.cpp  minimal_demo.cpp
docs/: CMAKE_OPTIONS.md  CNAME  C_Interface.md  MEMORY_MANAGEMENT.md  android_integration.md  cli.html  documentation.html  index.html
docs/content/: c-interface.zh.md  cli.md  cli.zh.md  cmake-options.md  cmake-options.zh.md  documentation.md  documentation.zh.md  implementation-details.md  implementation-details.zh.md  rust-bindings.md  rust-bindings.zh.md  video-memory-management.md  video-memory-management.zh.md
docs/css/: style.css
docs/js/: main.js
examples/: .gitignore  0-print_camera.cpp  1-minimal_example.cpp  2-capture_grab.cpp  3-capture_callback.cpp  4-example_with_glfw.cpp  Info.plist  Podfile  README.md  desktop.cmake  examples.cmake  examples.podspec
examples/android/: .gitignore  README.md  android_camera_example.cpp  build.gradle  gradlew  settings.gradle
examples/android/CcapDemo/app/src/main/cpp/: CMakeLists.txt
examples/ccapDemo.xcodeproj/: project.pbxproj
examples/desktop/: 0-print_camera.cpp  0-print_camera_c.c  1-minimal_example.cpp  1-minimal_example_c.c  2-capture_grab.cpp  2-capture_grab_c.c  3-capture_callback.cpp  3-capture_callback_c.c  4-example_with_glfw.cpp  4-example_with_glfw_c.c  5-play_video.cpp  5-play_video_c.c
examples/ios/: AppDelegate.h  AppDelegate.m  ExampleVC_gles.h  ExampleVC_gles.mm  ExampleVC_metal.h  ExampleVC_metal.mm  Info.plist  MainVC.h  MainVC.mm  main.m
include/: ccap_android.h  ccap_c.h  ccap_config.h  ccap_convert.h  ccap_convert_c.h  ccap_core.h  ccap_def.h  ccap_opencv.h  ccap_utils.h  ccap_utils_c.h
scripts/: README.md  build.sh  build_and_install.sh  build_android.sh  build_arm64.sh  build_arm64_win.sh  build_macos_universal.sh  build_x86_64.sh  format_all.sh  publish_rust_crate.sh  release.sh  run_tests.sh  test_arch.sh  test_installation.sh  test_remote_crate.sh  update_version.sh  verify_neon.sh
skills/: README.md
skills/ccap/: SKILL.md  (+1 more)
src/: CMakeLists_android.txt  CameraCapture.cpp  CameraCapture.h  CameraCaptureDirectShow.cpp  CameraCaptureDirectShow.h  CameraCaptureImp.cpp  CameraCaptureImp.h  CameraCaptureMSMF.cpp  CameraCaptureMSMF.h  CameraCaptureMac.h  CameraCaptureMac.mm  CameraCaptureWin.cpp  CameraCaptureWin.h  CameraHelper.java  README_ANDROID.md  ccap_android_utils.cpp  ccap_c.cpp  ccap_convert.cpp  ccap_convert_apple.cpp  ccap_convert_apple.h  ccap_convert_avx2.cpp  ccap_convert_avx2.h  ccap_convert_c.cpp  ccap_convert_frame.cpp  ccap_convert_frame.h  ccap_convert_neon.cpp  ccap_convert_neon.h  ccap_core.cpp  ccap_dshow_guids.h  ccap_file_reader_apple.h  ccap_file_reader_apple.mm  ccap_file_reader_windows.cpp  ccap_file_reader_windows.h  ccap_imp.cpp  ccap_imp.h  ccap_imp_android.cpp  ccap_imp_android.h  ccap_imp_apple.h  ccap_imp_apple.mm  ccap_imp_linux.cpp  (+11 more)
test_build/: 0-print_camera  0-print_camera_c  1-minimal_example  1-minimal_example_c  2-capture_grab  2-capture_grab_c  3-capture_callback  3-capture_callback_c  CMakeCache.txt  Makefile  ccapConfig.cmake  cmake_install.cmake
test_build_shared/: 0-print_camera  0-print_camera_c  1-minimal_example  1-minimal_example_c  2-capture_grab  2-capture_grab_c  3-capture_callback  3-capture_callback_c  CMakeCache.txt  Makefile  ccap.pc  cmake_install.cmake
tests/: CMakeLists.txt  COVERAGE_REPORT.md  README-refactor.md  README-zh-CN.md  README.md  test_accuracy.cpp  test_backend_manager.h  test_boundary_conditions.cpp  test_ccap_cli.cpp  test_cli_args_parser.cpp  test_color_conversions.cpp  test_convert_color_shuffle.cpp  test_convert_comprehensive.cpp  test_convert_platform_features.cpp  test_convert_yuv_format.cpp  test_convert_yuv_rgb.cpp  test_debug_detailed.cpp  test_debug_shuffle_map.cpp  test_debug_simple.cpp  test_device_hotplug.cpp  test_dual_implementation.cpp  test_example_helper.cpp  test_file_playback.cpp  test_frame_conversions.cpp  test_grab_timeout.cpp  test_guid_definitions.cpp  test_memory_safety.cpp  test_performance.cpp  test_platform_features.cpp  test_utils.cpp  test_utils.h  test_utils_avx2.h  test_windows_backends.cpp  test_yuv_conversions.cpp
(+24 files in other folders)
